--- a/index.html
+++ b/index.html
@@ -14,7 +14,35 @@
 
 
     <div class="wordle-container">
-        
+         <h2 class="heading-text">Wordle Game</h2>
+        <div class="chances-container">
+            <div class="row-container row--1">
+                <div class=" column column--1"></div>
+                <div class=" column column--2"></div>
+                <div class=" column column--3"></div>
+            </div>
+            <div class="row-container row--2">
+                <div class=" column column--4"></div>
+                <div class=" column column--5"></div>
+                <div class=" column column--6"></div>
+            </div>
+            <div class=" row-container row--3">
+                <div class=" column column--7"></div>
+                <div class=" column column--8"></div>
+                <div class=" column column--9"></div>
+            </div>
+            <div class=" row-container row--4">
+                <div class=" column column--10"></div>
+                <div class=" column column--11"></div>
+                <div class=" column column--12"></div>
+            </div>
+            <div class=" row-container row--5">
+                <div class=" column column--13"></div>
+                <div class=" column column--14"></div>
+                <div class=" column column--15"></div>
+            </div>
+        </div>
+        <div class="keyboard-container"></div>
     </div>
 </body>
 </html>
