--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Wordle</title>
 </head>
 <body>
-    <h1>Wordle</h1>
-    <h3>what is wordle?</h3>
+    <!-- <h1>Wordle</h1> -->
+    <!-- <h3>what is wordle?</h3> -->
 
 
     <div class="wordle-container">
@@ -20,29 +20,75 @@
                 <div class=" column column--1"></div>
                 <div class=" column column--2"></div>
                 <div class=" column column--3"></div>
-            </div>
-            <div class="row-container row--2">
                 <div class=" column column--4"></div>
                 <div class=" column column--5"></div>
-                <div class=" column column--6"></div>
+
             </div>
-            <div class=" row-container row--3">
+            <div class="row-container row--2">
+                <div class=" column column--6"></div>
                 <div class=" column column--7"></div>
                 <div class=" column column--8"></div>
                 <div class=" column column--9"></div>
-            </div>
-            <div class=" row-container row--4">
                 <div class=" column column--10"></div>
+            </div>
+            <div class=" row-container row--3">
                 <div class=" column column--11"></div>
                 <div class=" column column--12"></div>
-            </div>
-            <div class=" row-container row--5">
                 <div class=" column column--13"></div>
                 <div class=" column column--14"></div>
                 <div class=" column column--15"></div>
             </div>
+            <div class=" row-container row--4">
+                <div class=" column column--16"></div>
+                <div class=" column column--17"></div>
+                <div class=" column column--18"></div>
+                <div class=" column column--19"></div>
+                <div class=" column column--20"></div>
+            </div>
+            <div class=" row-container row--5">
+                <div class=" column column--21"></div>
+                <div class=" column column--22"></div>
+                <div class=" column column--23"></div>
+                <div class=" column column--24"></div>
+                <div class=" column column--25"></div>
+            </div>
         </div>
-        <div class="keyboard-container"></div>
+        <div class="keyboard-container">
+            <div class="keyboard-row--1">
+             <button class="btn">Q</button>
+             <button class="btn">W</button>
+             <button class="btn">E</button>
+             <button class="btn">R</button>
+             <button class="btn">T</button>
+             <button class="btn">Y</button>
+             <button class="btn">U</button>
+             <button class="btn">I</button>
+             <button class="btn">O</button>
+             <button class="btn">P</button>
+            </div>
+            <div class="keyboard-row--2">
+                <button class="btn">A</button>
+                <button class="btn">S</button>
+                <button class="btn">D</button>
+                <button class="btn">F</button>
+                <button class="btn">G</button>
+                <button class="btn">H</button>
+                <button class="btn">J</button>
+                <button class="btn">K</button>
+                <button class="btn">L</button>
+            </div>
+            <div class="keyboard-row--3">
+                <button class="btn-backspace">Backspace</button>
+                <button class="btn">Z</button>
+                <button class="btn">X</button>
+                <button class="btn">C</button>
+                <button class="btn">V</button>
+                <button class="btn">B</button>
+                <button class="btn">N</button>
+                <button class="btn">M</button>
+                <button class="btn-enter">Enter</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
