--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
             </div>
             <div class="row-container row--2">
-                <div class=" column column--6"></div>
-                <div class=" column column--7"></div>
-                <div class=" column column--8"></div>
-                <div class=" column column--9"></div>
-                <div class=" column column--10"></div>
+                <div class=" column column--1"></div>
+                <div class=" column column--2"></div>
+                <div class=" column column--3"></div>
+                <div class=" column column--4"></div>
+                <div class=" column column--5"></div>
             </div>
             <div class=" row-container row--3">
                 <div class=" column column--11"></div>
@@ -55,38 +55,38 @@
         </div>
         <div class="keyboard-container">
             <div class="keyboard-row--1">
-             <button class="btn">Q</button>
-             <button class="btn">W</button>
-             <button class="btn">E</button>
-             <button class="btn">R</button>
-             <button class="btn">T</button>
-             <button class="btn">Y</button>
-             <button class="btn">U</button>
-             <button class="btn">I</button>
-             <button class="btn">O</button>
-             <button class="btn">P</button>
+             <button class="btn btn-key">Q</button>
+             <button class="btn btn-key">W</button>
+             <button class="btn btn-key">E</button>
+             <button class="btn btn-key">R</button>
+             <button class="btn btn-key">T</button>
+             <button class="btn btn-key">Y</button>
+             <button class="btn btn-key">U</button>
+             <button class="btn btn-key">I</button>
+             <button class="btn btn-key">O</button>
+             <button class="btn btn-key">P</button>
             </div>
             <div class="keyboard-row--2">
-                <button class="btn">A</button>
-                <button class="btn">S</button>
-                <button class="btn">D</button>
-                <button class="btn">F</button>
-                <button class="btn">G</button>
-                <button class="btn">H</button>
-                <button class="btn">J</button>
-                <button class="btn">K</button>
-                <button class="btn">L</button>
+                <button class="btn btn-key">A</button>
+                <button class="btn btn-key">S</button>
+                <button class="btn btn-key">D</button>
+                <button class="btn btn-key">F</button>
+                <button class="btn btn-key">G</button>
+                <button class="btn btn-key">H</button>
+                <button class="btn btn-key">J</button>
+                <button class="btn btn-key">K</button>
+                <button class="btn btn-key">L</button>
             </div>
             <div class="keyboard-row--3">
-                <button class="btn-backspace">Backspace</button>
-                <button class="btn">Z</button>
-                <button class="btn">X</button>
-                <button class="btn">C</button>
-                <button class="btn">V</button>
-                <button class="btn">B</button>
-                <button class="btn">N</button>
-                <button class="btn">M</button>
-                <button class="btn-enter">Enter</button>
+                <button class="btn-backspace btn-key">Backspace</button>
+                <button class="btn btn-key">Z</button>
+                <button class="btn btn-key">X</button>
+                <button class="btn btn-key">C</button>
+                <button class="btn btn-key">V</button>
+                <button class="btn btn-key">B</button>
+                <button class="btn btn-key">N</button>
+                <button class="btn btn-key">M</button>
+                <button class="btn-enter btn-key">Enter</button>
             </div>
         </div>
     </div>
